--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment files
 .env
+.env.local
+.env.*.local
+
+# Build and dependencies
+dist
+node_modules
