--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
     "framework": "vite",
     "buildCommand": "npm run build",
-    "outputDirectory": "dist"
+    "outputDirectory": "dist",
+    "functions": {
+        "api/*.js": {
+            "runtime": "nodejs20.x"
+        }
+    },
+    "rewrites": [
+        { "source": "/api/(.*)", "destination": "/api/$1" },
+        { "source": "/(.*)", "destination": "/index.html" }
+    ]
 }
