--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,9 @@
 {
     "buildCommand": "npm run build",
     "outputDirectory": "dist",
-    "functions": {
-        "api/*.js": {
-            "runtime": "nodejs20.x"
-        }
-    },
     "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api/$1"
-        },
-        {
-            "source": "/(.*)",
+            "source": "/((?!api/).*)",
             "destination": "/index.html"
         }
     ]
